<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_controls"
            android:icon="@drawable/ic_controls"
            android:title="@string/menu_controls_title"
            app:iconTint="@color/gray"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_target"
            android:icon="@drawable/ic_target"
            android:title="@string/menu_target_title"
            app:iconTint="@color/gray"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_add"
            android:icon="@drawable/ic_plus"
            android:title="@string/menu_add_title"
            app:iconTint="@color/gray"
            app:showAsAction="ifRoom"/>

</menu>