<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.register.RegisterActivity">

    <data>

        <variable
                name="viewModel"
                type="br.com.ruyano.trackit.view.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/login_form_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/gl_login_start"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="20dp"/>

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/gl_login_end"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintGuide_end="20dp"
                        android:orientation="vertical" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:error="@{viewModel.mModel.nameError}"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="@+id/gl_login_start"
                        app:layout_constraintBottom_toTopOf="@+id/til_email"
                        app:layout_constraintEnd_toEndOf="@+id/gl_login_end"
                        app:layout_constraintTop_toTopOf="parent">

                    <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:text="@={viewModel.mModel.name}"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_form_margin"
                        app:error="@{viewModel.mModel.emailError}"
                        app:layout_constraintStart_toStartOf="@+id/gl_login_start"
                        app:layout_constraintBottom_toTopOf="@+id/til_password"
                        app:layout_constraintEnd_toEndOf="@+id/gl_login_end"
                        app:layout_constraintTop_toBottomOf="@+id/til_name">

                    <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:text="@={viewModel.mModel.email}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_form_margin"
                        app:passwordToggleEnabled="true"
                        app:error="@{viewModel.mModel.passwordError}"
                        app:layout_constraintTop_toBottomOf="@+id/til_email"
                        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
                        app:layout_constraintStart_toStartOf="@+id/gl_login_start"
                        app:layout_constraintEnd_toEndOf="@+id/gl_login_end">

                    <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:text="@={viewModel.mModel.password}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/btn_create_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_form_margin"
                        android:text="@string/create_account"
                        android:onClick="@{() -> viewModel.createAccount()}"
                        app:layout_constraintTop_toBottomOf="@+id/til_password"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/gl_login_start"
                        app:layout_constraintEnd_toEndOf="@+id/gl_login_end"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>